--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <span>© <span id="y"></span> مدونة الاتصالات العربية — جميع الحقوق محفوظة.</span>
     <span>
       <a href="/about">من نحن</a> ·
-      <a href="/privacy">الخصوصية</a> ·
+      <a href="/terms">الخصوصية</a> ·
       <a href="/terms">الشروط والأحكام</a>
     </span>
   </footer>
