--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
     <span>© <span id="y"></span> مدونة الاتصالات العربية — جميع الحقوق محفوظة.</span>
     <span>
       <a href="/about">من نحن</a> ·
-      <a href="/terms">الخصوصية</a> ·
-      <a href="/terms">الشروط والأحكام</a>
+      <a href="/terms.html">الخصوصية</a> ·
+      <a href="/terms.html">الشروط والأحكام</a>
     </span>
   </footer>
 
