--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a href="#latest">الجديد</a>
         <a href="#guides">شروحات</a>
         <a href="#topics">الموضوعات</a>
-        <a href="/terms">الشروط والأحكام</a>
+        <a href="/terms.html">الشروط والأحكام</a>
       </nav>
       <div class="search" role="search">
         <input type="search" placeholder="ابحث عن 5G، الألياف، IoT…" aria-label="بحث" />
