--- a/terms.html
+++ b/terms.html
@@ -99,7 +99,7 @@
 
   <footer>
     <p>© 2025 حكومة دولة الكويت — جميع الحقوق محفوظة</p>
-    <p><a href="/terms" style="color:#7dd3fc;">الشروط والأحكام</a> · <a href="/privacy" style="color:#7dd3fc;">سياسة الخصوصية</a></p>
+    <p><a href="/terms.html" style="color:#7dd3fc;">الشروط والأحكام</a> · <a href="/terms.html" style="color:#7dd3fc;">سياسة الخصوصية</a></p>
   </footer>
 </body>
 </html>
